data/derived/fa15/progs/unify/prog2983.ml.out
Characters 91-100:
  | Sine e    -> "sin(pi*"exprToString e")"
                 ^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
